--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,10 @@
         </a>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
       </div>
+	  
+	  <div class="container">
+		<h3><a href="/">Home</a> || <a href="/aboutus.html">About Us</a> || <a href="/posts.html">Blog Posts</a></h3>
+	  </div>
     </header>
 
     <div class="container">
@@ -26,15 +30,9 @@
       </section>
     </div>
 
-    {% if site.google_analytics %}
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', '{{ site.google_analytics }}', 'auto');
-        ga('send', 'pageview');
-      </script>
-    {% endif %}
+	
+	<div class="container">
+		<h6>&copy; 2020 Russell Johnson and James Sumihiro</h6>
+	</div>
   </body>
 </html>
