--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,10 @@
 ---
 layout: default
 ---
+<small>{{ page.date | date: "%-d %B %Y" }} || {{ page.author | default: site.author }}</small>
+<br>
 
-<small>{{ page.date | date: "%-d %B %Y" }}</small>
 <h1>{{ page.title }}</h1>
-
-<p class="view">by {{ page.author | default: site.author }}</p>
 
 {{content}}
 
