--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,17 @@
 ---
 layout: default
 ---
-<small>{{ page.date | date: "%-d %B %Y" }} || {{ page.author | default: site.author }}</small>
+<h1>{{ page.title }}</h1>
+<small>Author: {{ page.author | default: site.author }}</small>
 <br>
 
-<h1>{{ page.title }}</h1>
 
 {{content}}
 
+<small>Author: {{ page.author | default: site.author }}</small>
+<br>
+<small>Published: {{ page.date | date: "%Y %B %-d" }}</small>
+<br>
 {% if page.tags %}
-  <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
+  <small>Tags: <em>{{ page.tags | join: "</em>, <em>" }}</em></small>
 {% endif %}
