--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -1,5 +1,6 @@
 @import "rouge-base16-dark";
 @import "default_colors";
+@import "kbd";
 
 $body-background: $cod-grey !default;
 $body-foreground: $gallery !default;
