--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       </div>
 	  
 	  <div class="container">
-		<h3><a href="/">Home</a> || <a href="/aboutus.html">About Us</a> || <a href="/posts.html">Blog Posts</a></h3>
+		<h3><a href="/">Home</a> || <a href="/aboutus.html">About Us</a> || <a href="/posts.html">Blog Posts</a> || <a href="/digipen.html">Digipen</a></h3>
 	  </div>
     </header>
 
